# lotus_extra

./: .gitignore  CMakeLists.txt  README.md
src/: controlFileInterface.f90  dataFileOperations.f90  odeSolver.f90  splineInterpolation.f90
unitTests/: cleanTests  runTest
unitTests/src/: unitTestsModule.f90
unitTests/test00_geom_global/: test00.f90
unitTests/test01_geom_map/: runTest  test01.f90
unitTests/test02_extra_splineInterpolation/: test02.f90
unitTests/test03_extra_dataReading/: test03.f90
unitTests/test04_extra_controlFileReading/: makeTestData.py  test04.f90
unitTests/test05_odeSolver/: plotData.gnuplot  test05.f90
